# game-dev-1

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/: main.cpp
src/core/: window.cpp  window.h
src/core/menu/: menu.cpp  menu.h
src/core/window/: window.cpp
